# hpc-2023-bee-simulation

./: .gitignore  CMakeLists.txt  README.md  benchmark_results_visualization.ipynb  flake.nix  map_from_rank_0.txt  map_from_rank_1.txt  map_from_rank_10.txt  map_from_rank_11.txt  map_from_rank_2.txt  map_from_rank_3.txt  map_from_rank_4.txt  map_from_rank_5.txt  map_from_rank_6.txt  map_from_rank_7.txt  map_from_rank_8.txt  map_from_rank_9.txt  meson.build  out.csv  runbenchmark.py  runbenchmark.sh  test.cpp
.ipynb_checkpoints/: benchmark_results_visualization-checkpoint.ipynb
accessressources/: ressourcearray  ressourcearray.cpp  ressources  ressources.cpp
agent/: agents  agents.cpp  basic.cpp  var.cpp
beehive/: agents  agents.cpp
benchmarks/: multikey_matrix.cpp  point_tree.cpp  two_d_tree.cpp  worldmap.cpp
cardgenerator/: 1  1.cpp  2  2.cpp  map
cardgenerator/final/: final.cpp  map  perlinnoise.cpp
mpi/: README.md  mpi_allgather.cpp  mpi_send_struct.cpp  run  splitmap  splitmap.cpp
src/: main.cpp
src/agents/: agent.cpp  agent.hpp  agent_type.cpp  bee.cpp  bee.hpp  flower.cpp  flower.hpp  hive.cpp  hive.hpp  hive_bee_access.cpp  hive_bee_access.hpp  var.cpp  var.hpp
src/mpi/: mpi_hello_world.cpp
src/utils/: coordinate_matrix.hpp  coordinates.hpp  dottest_double.dot  dottest_int.dot  multikey_matrix.hpp  multikey_matrix_array.hpp  pair_hash.hpp  point_tree.hpp  remove_test.dot  two_d_tree.hpp
src/world/: chunking.cpp  chunking.hpp  configuration.hpp  generator.cpp  generator.hpp  out.csv  seeding.cpp  seeding.hpp  worldstate.cpp  worldstate.hpp
tests/: matchers.hpp  test_agents.cpp  test_point_tree.cpp  test_two_d_tree.cpp  test_worldstate.cpp
